fix: tweak alignment in landing card

--- a/src/views/certifications/views/landing/components/certification-program-summary-card/certification-program-summary-card.module.css
+++ b/src/views/certifications/views/landing/components/certification-program-summary-card/certification-program-summary-card.module.css
@@ -16,6 +16,7 @@
 	composes: hds-typography-body-300 from global;
 	font-weight: var(--token-typography-font-weight-medium);
 	color: var(--token-color-foreground-primary);
+	padding-top: 3px;
 }
 
 .buttonGroup {
